--- a/food_stories/docker-compose.yml
+++ b/food_stories/docker-compose.yml
@@ -1,16 +1,17 @@
 version: '3.1'
 
 services:
-
   db:
-    image: postgres
+    image: mysql
+    command: --default-authentication-plugin=mysql_native_password
     restart: always
-    ports: 
-      - 5432:5432
+    volumes:
+      - ./mydb/:/var/lib/mysql
+    ports:
+      - 3306:3306
     environment:
-      POSTGRES_PASSWORD: 12345
-      POSTGRES_USER: tech
-      POSTGRES_DB: stories
+      MYSQL_ROOT_PASSWORD: "12345"
+      MYSQL_DATABASE: "library_books"
 
   adminer:
     image: adminer
