--- a/food_stories/requirements.txt
+++ b/food_stories/requirements.txt
@@ -6,14 +6,20 @@ cryptography==38.0.3
 defusedxml==0.7.1
 Django==4.1.1
 django-4-jet==1.0.9
+django-filter==22.1
 django-modeltranslation==0.18.7
+djangorestframework==3.14.0
+djangorestframework-simplejwt==5.2.2
 idna==3.4
+importlib-metadata==5.2.0
+Markdown==3.4.1
 oauthlib==3.2.2
 Pillow==9.2.0
 psycopg2-binary==2.9.3
 pycparser==2.21
 PyJWT==2.6.0
 python3-openid==3.2.0
+pytz==2022.7
 requests==2.28.1
 requests-oauthlib==1.3.1
 six==1.16.0
@@ -22,3 +28,4 @@ social-auth-core==4.3.0
 sqlparse==0.4.2
 typing_extensions==4.4.0
 urllib3==1.26.12
+zipp==3.11.0
