--- a/food_stories/docker-compose.yml
+++ b/food_stories/docker-compose.yml
@@ -1,15 +1,34 @@
 version: '3.1'
 
 services:
+  nginx:
+    build: ./nginx
+    ports:
+      - 80:80
+    depends_on:
+      - "web"
+    volumes:
+      - ./static/:/code/static/
+      - ./media/:/code/media/
+
   db:
     image: postgres
+    volumes:
+      - ./pgdb:/var/lib/postgresql
     ports: 
       - 5432:5432
     restart: always
-    environment:
-      POSTGRES_PASSWORD: 12345
-      POSTGRES_USER: tech
-      POSTGRES_DB: stories
+    env_file: .env
+
+  web:
+    container_name: food_stories
+    build: .
+    ports: 
+      - 8000:8000
+    depends_on: 
+      - "db"
+      - "redis"
+    env_file: .env
 
   redis:
     image: redis
