--- a/food_stories/requirements.txt
+++ b/food_stories/requirements.txt
@@ -1,31 +1,61 @@
+amqp==5.1.1
 asgiref==3.5.2
+async-timeout==4.0.2
+billiard==3.6.4.0
+celery==5.2.7
 certifi==2022.9.24
 cffi==1.15.1
 charset-normalizer==2.1.1
+click==8.1.3
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.2.0
+coreapi==2.3.3
+coreschema==0.0.4
 cryptography==38.0.3
 defusedxml==0.7.1
 Django==4.1.1
 django-4-jet==1.0.9
+django-celery-beat==2.4.0
+django-cors-headers==3.13.0
 django-filter==22.1
 django-modeltranslation==0.18.7
+django-timezone-field==5.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
+drf-yasg==1.21.4
 idna==3.4
 importlib-metadata==5.2.0
+inflection==0.5.1
+itypes==1.2.0
+Jinja2==3.1.2
+kombu==5.2.4
 Markdown==3.4.1
+MarkupSafe==2.1.1
 oauthlib==3.2.2
+packaging==22.0
 Pillow==9.2.0
+prompt-toolkit==3.0.36
 psycopg2-binary==2.9.3
 pycparser==2.21
 PyJWT==2.6.0
+python-crontab==2.7.1
+python-dateutil==2.8.2
 python3-openid==3.2.0
 pytz==2022.7
+redis==4.4.2
 requests==2.28.1
 requests-oauthlib==1.3.1
+ruamel.yaml==0.17.21
+ruamel.yaml.clib==0.2.7
 six==1.16.0
 social-auth-app-django==5.0.0
 social-auth-core==4.3.0
 sqlparse==0.4.2
 typing_extensions==4.4.0
+tzdata==2022.7
+uritemplate==4.1.1
 urllib3==1.26.12
+vine==5.0.0
+wcwidth==0.2.6
 zipp==3.11.0
