--- a/food_stories/docker-compose.yml
+++ b/food_stories/docker-compose.yml
@@ -13,12 +13,12 @@ services:
 
   db:
     image: postgres
-    volumes:
-      - ./pgdb:/var/lib/postgresql
     ports: 
       - 5432:5432
     restart: always
     env_file: .env
+    volumes:
+      - ./db:/var/lib/postgresql/data
 
   web:
     container_name: food_stories
@@ -30,14 +30,20 @@ services:
       - "redis"
     env_file: .env
 
+
+  celery:
+    container_name: celery
+    command: celery -A food_stories worker --beat --scheduler django --loglevel=info
+    build: 
+      context: .
+      dockerfile: celery.dockerfile
+    depends_on: 
+      - "db"
+      - "redis"
+    env_file: .env
+
   redis:
     image: redis
     ports: 
       - 6379:6379
     restart: always
-    
-  adminer:
-    image: adminer
-    restart: always
-    ports:
-      - 8080:8080
