--- a/food_stories/requirements.txt
+++ b/food_stories/requirements.txt
@@ -24,6 +24,7 @@ django-timezone-field==5.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 drf-yasg==1.21.4
+gunicorn==20.1.0
 idna==3.4
 importlib-metadata==5.2.0
 inflection==0.5.1
